Наконец "добил" сериализатор. Раньше пытался сделать так TweetInfo:Java.Lang.Object, Java.IO.ISerializable, теперь сделал просто сериализацию объекта в строку - как просто жить.

--- a/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
+++ b/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="fill_parent"
     android:padding="6dip"
     android:layout_marginTop="10dp">
     <ImageView
-        android:id="@+id/useravatar"
+        android:id="@+id/detailuseravatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
     <LinearLayout
-        android:id="@+id/leftblock"
+        android:id="@+id/detailleftblock"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/userdiscription"
@@ -18,12 +18,12 @@
         android:layout_toLeftOf="@+id/useravatar"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/userdiscription"
+            android:id="@+id/detailuserdiscription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nothing" />
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/detailusername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
