--- a/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
+++ b/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
@@ -5,28 +5,35 @@
     android:padding="6dip"
     android:layout_marginTop="10dp">
     <ImageView
+        android:layout_alignParentLeft="true"
         android:id="@+id/detailuseravatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true" />
+        android:layout_width="50dp"
+        android:layout_height="60dp" />
     <LinearLayout
         android:id="@+id/detailleftblock"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/userdiscription"
-        android:layout_alignTop="@+id/userdiscription"
-        android:layout_toLeftOf="@+id/useravatar"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_toRightOf="@+id/detailuseravatar"
         android:orientation="vertical">
         <TextView
             android:id="@+id/detailuserdiscription"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nothing" />
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:text="Name"
+            android:textAllCaps="true"
+            android:textColor="#ff70139f" />
         <TextView
             android:id="@+id/detailusername"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:textColor="#8000FF" />
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:text="via Web" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/detailtextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Twitter twitter jitter glitter"
+        android:layout_below="@id/detailleftblock" />
 </RelativeLayout>
