--- a/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
+++ b/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
@@ -16,7 +16,7 @@
         android:layout_toRightOf="@+id/detailuseravatar"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/detailuserdiscription"
+            android:id="@+id/detailusername"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="2"
@@ -24,16 +24,42 @@
             android:textAllCaps="true"
             android:textColor="#ff70139f" />
         <TextView
-            android:id="@+id/detailusername"
+            android:id="@+id/detailuserdiscription"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="3"
             android:text="via Web" />
     </LinearLayout>
     <TextView
+        android:layout_marginLeft=" 30dp"
         android:id="@+id/detailtextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Twitter twitter jitter glitter"
-        android:layout_below="@id/detailleftblock" />
+        android:layout_below="@+id/detailleftblock" />
+    <View
+        android:id="@+id/detaildeviderline"
+        android:layout_below="@+id/detailtextview"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+    <LinearLayout
+        android:id="@+id/detaildownblock"
+        android:layout_marginLeft=" 30dp"
+        android:layout_below="@+id/detaildeviderline"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/detaildatetextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date" />
+        <TextView
+            android:id="@+id/detailsiteinfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:text="something" />
+    </LinearLayout>
 </RelativeLayout>
