--- a/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
+++ b/TwitterMessangerForAndroid/Resources/layout/DatailInfoLayout.xml
@@ -2,63 +2,75 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="6dip"
+    android:padding="25dip"
     android:layout_marginTop="10dp">
     <ImageView
         android:layout_alignParentLeft="true"
         android:id="@+id/detailuseravatar"
-        android:layout_width="50dp"
-        android:layout_height="60dp" />
+        android:layout_width="100dp"
+        android:layout_height="120dp" />
     <LinearLayout
         android:id="@+id/detailleftblock"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="120dp"
         android:layout_toRightOf="@+id/detailuseravatar"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="30dp">
         <TextView
             android:id="@+id/detailusername"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
             android:text="Name"
+            android:textSize="16dp"
             android:textAllCaps="true"
-            android:textColor="#ff70139f" />
+            android:textStyle="bold"
+            android:textColor="#2789AE"
+            android:layout_marginTop="30dp" />
         <TextView
             android:id="@+id/detailuserdiscription"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:text="via Web" />
+            android:layout_height="wrap_content"
+            android:textSize="12dp"
+            android:textColor="#ffffffff"
+            android:text="via Web"
+            android:layout_marginTop="15dp" />
     </LinearLayout>
     <TextView
-        android:layout_marginLeft=" 30dp"
         android:id="@+id/detailtextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Twitter twitter jitter glitter"
-        android:layout_below="@+id/detailleftblock" />
+        android:layout_below="@+id/detailleftblock"
+        android:textSize="12dp"
+        android:textColor="#ffffffff"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
     <View
         android:id="@+id/detaildeviderline"
         android:layout_below="@+id/detailtextview"
-        android:layout_width="fill_parent"
+        android:layout_width="125dp"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
     <LinearLayout
         android:id="@+id/detaildownblock"
-        android:layout_marginLeft=" 30dp"
         android:layout_below="@+id/detaildeviderline"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="3dp">
         <TextView
             android:id="@+id/detaildatetextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:textColor="#ffffffff"
             android:text="Date" />
         <TextView
             android:id="@+id/detailsiteinfo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="10dp"
+            android:textColor="#ffffffff"
             android:paddingLeft="30dp"
             android:text="something" />
     </LinearLayout>
