--- a/TwitterMessangerForAndroid/Resources/layout/Main.axml
+++ b/TwitterMessangerForAndroid/Resources/layout/Main.axml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainlayout"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
     <android.support.v4.view.ViewPager
@@ -19,8 +19,10 @@
     <Button
         android:id="@+id/MoreTwittsButton"
         android:text="Показать ещё"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:onClick="moreTwittsClick" />
+        android:layout_marginTop="33.3dp"
+        android:layout_marginBottom="50dp"
+        android:layout_gravity="center" />
 </LinearLayout>
