--- a/TwitterMessangerForAndroid/Resources/layout/TwitsListView.xml
+++ b/TwitterMessangerForAndroid/Resources/layout/TwitsListView.xml
@@ -10,5 +10,6 @@
         android:id="@+id/TwitsListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:listSelector="@drawable/listitemselector" />
 </LinearLayout>
